--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-professional-poker-card-dealer",
+  "name": "professional-poker-card-dealer---pokeno",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,8 +12,7 @@
     "react-dom": "^19.2.4",
     "react": "^19.2.4",
     "gsap": "^3.14.2",
-    "pixi.js": "7.4.2",
-    "@google/genai": "^1.41.0"
+    "pixi.js": "7.4.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
